# tes3automaton

./: .gitignore  README.md  index.html  package.json  requirements.txt
src/: App.tsx  DarkModeProvider.tsx  __init__.py  __main__.py  atoms.ts  cli.py  commands.ts  config.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  respec.rs
src/assets/: Icons.tsx
src/commands/: batch_img.py
src/components/: AppContainer.tsx  Container.tsx
src/components/views/: RespecView.tsx  SettingsView.tsx
src/components/views/settings/: DarkModeToggleButton.tsx  SelectDirectoryButton.tsx  ZoomSelector.tsx
