[package]
name = "tes3automaton"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
tes3 = { git = "https://github.com/Greatness7/tes3" }
walkdir = "^2.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
